# fastapi-vue3-fullstack

./: README.md
backend/admin/: LICENSE
backend/admin/src/: main.py
backend/services/admin_services/: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: user.ts
frontend/src/config/: index.ts
frontend/src/plugins/: index.ts
frontend/src/router/: index.ts
frontend/src/stores/: user.ts
frontend/src/types/: response.ts  user.ts
frontend/src/utils/: accessToken.ts  request.ts  validate.ts
frontend/src/views/index/: index.vue
frontend/src/views/login/: index.vue
