[project]
name = "v1"
version = "0.1.0"
description = "Admin Service By FastAPI"
authors = [
    { name = "YuanJun", email = "yuanjun@example.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "ruff>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
# 排除常见忽略目录
exclude = [
    ".git", 
    ".venv",
    "venv", 
    "__pypackages__", 
    "__pycache__",
    ".pyenv",
    ".ipynb_checkpoints",
    ".pytype",
    ".vscode",
    ".direnv",
    ".pytest_cache",
    ".ruff_cache",
    ".mypy_cache",
    "docs",
    "tests",
]
# 代码风格设置（与Black保持一致）
line-length = 100
indent-width = 4
target-version = "py313"  # 默认Python 3.13
show-fixes = true

[tool.ruff.lint]
# 代码提示:默认启用的规则集
select = [
    "E",  # Pycodestyle 错误
    "F",  # Pyflakes 错误
    "W",  # Pycodestyle 警告
    "I",  # Import 排序 (isort)
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # 行长度检查
]
fixable = ["ALL"]  # 所有规则都可自动修复
unfixable = []
# 允许下划线前缀的未使用变量
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
# 代码提示排序: 导入排序风格（与isort兼容）
lines-after-imports = 2
known-first-party = ["v1"] # 写项目名
known-third-party = []

[tool.ruff.format]
# 代码格式化:风格（与Black兼容）
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false  # 默认不格式化文档字符串中的代码示例
docstring-code-line-length = "dynamic" # 根据文档字符串的内容动态调整行长度

[tool.mypy]
python_version = "3.13"
warn_return_any = true # 当函数返回 Any 类型时发出警告
warn_unused_configs = true # 当配置文件中存在未使用的配置项时发出警告
disallow_untyped_defs = true # 不允许定义没有类型注解的函数
check_untyped_defs = true # 对没有类型注解的函数也进行类型检查
exclude = ["docs/"]

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
